--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.ojdbc7.jar=C:\\Users\\haoling_chang1\\Downloads\\ojdbc7.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\haoling_chang1\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Dave\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
