--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,14 +30,14 @@ dist.jar=${dist.dir}/RecipeHaoling.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc7.jar=E:\\Document\\CSC 745\\ojdbc7.jar
+file.reference.ojdbc7.jar=C:\\Users\\Dave\\Desktop\\databaseTheoryTeamProject\\ojdbc7.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
