--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.jar=${dist.dir}/RecipeHaoling.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc7.jar=C:\\Users\\ekustudent\\Downloads\\RecipeHaoling-master\\ojdbc7.jar
+file.reference.ojdbc7.jar=C:\\Users\\ekustudent\\Downloads\\ojdbc7.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
